# ai-projects-to-google-calendar

./: .gitignore  README.md  pyproject.toml
opencode_calendar/: __main__.py  calendar_client.py  cli.py  config.py  db.py  summarizer.py  time_utils.py
